--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
 
     <header>
         <div class="esfera">
-            <div class="icone"> <a target="_blank" rel="external" href="https://github.com/Rasyonheneyah"></a></div>
+            <div class="icone porthon"> <a target="_blank" rel="external" href="https://github.com/Rasyonheneyah"></a></div>
         </div>
         <h1 id="theader">Porthon</h1>
-        <nav>
-            
-        </nav>
+        <div class="linha-separadora"></div>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="index.html"><button>Página Inicial</button></a></li>
+                    <li><a href="#sobre"><button>Linguagens</button></a></li>
+                    <li><a href="#contato"><button>Contato</button></a></li>
+                </ul>    
+            </nav>
+        </div>
 
     </header>
 
