--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <button class="hamburguer" onclick="toggleMenu()">☰</button>  
           <nav class="nav-principal">
             <ul>
-              <li><a class="botao-nav" href="index.html">Página Inicial</a></li>
+              <li><a class="botao-nav" href="index.html">Início</a></li>
               <li class="dropdown">
                 <a class="botao-nav" href="#">Linguagens ▾</a>
                 <ul class="submenu">
@@ -51,6 +51,10 @@
                         a=a+a
                 </code>
             </pre>
+            <div class="imagem-container">
+              <img src="python.png" alt="Descrição da imagem">
+              <p>Bike!</p>
+          </div>
         
     </main>
 
