--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Porthon</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="porthon.ico">
-
-</head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+  </head>
 <body>
 
     <header>
@@ -20,16 +20,24 @@
           <button class="hamburguer" onclick="toggleMenu()">☰</button>  
           <nav class="nav-principal">
             <ul>
-              <li><a class="botao-nav" href="index.html">Início</a></li>
-              <li class="dropdown">
-                <a class="botao-nav" href="#">Linguagens ▾</a>
+              <li>
+                <a class="botao-nav" href="index.html">
+                  <span class="material-symbols-outlined">home</span> Início
+                </a>
+              </li>
+                            <li class="dropdown">
+                <a class="botao-nav" href="#"><span class="material-symbols-outlined">terminal</span> Linguagens ▾</a>
                 <ul class="submenu">
                   <li>
                     <a class="botao-nav submenu-item python" href="python.html">Python</a>
                   </li>
                 </ul>
               </li>
-              <li><a class="botao-nav" href="#contato">Contato</a></li>
+              <li>
+                <a class="botao-nav" href="#contato">
+                  <span class="material-symbols-outlined">group</span> Contato
+                </a>
+              </li>
             </ul>    
           </nav>
         </div>
