--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                         <h3>Introdução</h3>
                     <p>A programação tem sido, há muito tempo, uma poderosa ferramenta para a otimização de tarefas. Responsável por inúmeros avanços da nossa sociedade, ela foi criada e aprimorada por verdadeiros gênios da história, dada a sua complexidade. No entanto, essa característica leva muitas pessoas a acreditarem que não têm habilidade suficiente para aprender, desistindo logo no início de sua jornada. Isso, porém, não é verdade, pois existem diversos caminhos que tornam o aprendizado mais acessível.
                     Um ótimo exemplo é o Portugol, uma linguagem que utiliza o português como base para sua estrutura. Isso facilita a compreensão dos comandos presentes nas linguagens de programação, já que há muitas semelhanças entre elas. Esses pontos em comum, entre outros fatores, favorecem uma comunicação mais eficaz por meio do chamado "Português Estruturado" no cérebro, promovendo uma aprendizagem significativa. Por isso, neste site, exploraremos mais profundamente a relação entre a mente humana e a programação, realizando comparações entre o Portugol e outras linguagens de programação — inicialmente o Python — e analisando como a aprendizagem significativa contribui nesse processo.</p>
+                      <h3>Aprendizagem Significativa</h3>
+                    <p></p>
             <pre>
                 <code>
                     for i in range(5):
