--- a/python.html
+++ b/python.html
@@ -6,31 +6,43 @@
   <title>Porthon | Python</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="porthon.png" />
-  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+
 </head>
 
 <body>
   <header>
     <div class="brand">
-      <span class="icone porthon" title="Logo Porthon"></span>
-      <h1 id="theader">Porthon <span class="subh1">. Python()</span></h1>
+      <span class="icone porthon"></span> 
+      <h1 id="theader">Porthon</h1>
     </div>
-
+  
     <div class="menu">
-      <button class="hamburguer" onclick="toggleMenu()">☰</button>
+      <button class="hamburguer" onclick="toggleMenu()">☰</button>  
       <nav class="nav-principal">
         <ul>
-          <li><a class="botao-nav" href="index.html">Início</a></li>
-          <li class="dropdown">
-            <a class="botao-nav" href="#">Conteúdo</a>
-            <div class="submenu">
-              <a class="submenu-item python" href="python.html">Python</a>
-            </div>
+          <li>
+            <a class="botao-nav" href="index.html">
+              <span class="material-symbols-outlined">home</span> Início
+            </a>
           </li>
-        </ul>
+                        <li class="dropdown">
+            <a class="botao-nav" href="#"><span class="material-symbols-outlined">terminal</span> Linguagens ▾</a>
+            <ul class="submenu">
+              <li>
+                <a class="botao-nav submenu-item python" href="python.html">Python</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a class="botao-nav" href="#contato">
+              <span class="material-symbols-outlined">group</span> Contato
+            </a>
+          </li>
+        </ul>    
       </nav>
     </div>
-  </header>
+  </header> 
 
   <main>
     <h1>Introdução ao Python</h1>
@@ -60,5 +72,7 @@
     </div>
 
     </footer>
+    <script src="script.js"></script>
+
 </body>
 </html>
