--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </a>
               </li>
                             <li class="dropdown">
-                <a class="botao-nav" href="#"><span class="material-symbols-outlined">terminal</span> Linguagens ▾</a>
+                <a class="botao-nav" href="#"><span class="material-symbols-outlined">terminal</span> Linguagens </a>
                 <ul class="submenu">
                   <li>
                     <a class="botao-nav submenu-item python" href="python.html">Python</a>
@@ -34,8 +34,8 @@
                 </ul>
               </li>
               <li>
-                <a class="botao-nav" href="#contato">
-                  <span class="material-symbols-outlined">group</span> Contato
+                <a class="botao-nav" href="#sobre-nos">
+                  <span class="material-symbols-outlined">group</span>Sobre Nós
                 </a>
               </li>
             </ul>    
