--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porthon</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediainicio.css">
     <link rel="shortcut icon" href="porthon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
   </head>
@@ -13,7 +14,7 @@
     <header>
         <div class="brand">
           <span class="icone porthon"></span> 
-          <h1 id="theader">Porthon</h1>
+          <h1 id="theader">Porthon </h1>
         </div>
       
         <div class="menu">
