--- a/python.html
+++ b/python.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Porthon | Python</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="mediapython.css">
   <link rel="icon" href="porthon.png" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 
@@ -14,7 +15,7 @@
   <header>
     <div class="brand">
       <span class="icone porthon"></span> 
-      <h1 id="theader">Porthon</h1>
+      <h1 id="theader">Porthon <span class="subh1">.python()</span></h1>
     </div>
   
     <div class="menu">
