--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -10,7 +10,30 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
   <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
   <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+  <style>
+    .retro-button {
+    display: inline-block;
+    background-color: #0015ff;
+    color: #FFA500; 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    padding: 12px 24px;
+    text-decoration: none;
+    border: 3px solid #FFD700; 
+    border-radius: 8px;
+    box-shadow: 3px 3px 0px #000;
+    transition: all 0.2s ease-in-out;
+    font-weight: bold;
+    margin: 1em 0 2em 4em;
+  }
 
+  .retro-button:hover {
+    background-color: #002fff;
+    color: white;
+    transform: translate(-2px, -2px);
+    box-shadow: 5px 5px 0px #000;
+  }
+  </style>
 </head>
 
 <body>
@@ -48,23 +71,19 @@
   </header> 
 
   <main>
-    <h1>Introdução ao Python</h1>
+    <h1>Quem somos?</h1>
+    <h2>O que é o Porthon?</h2>
     <p>
-      Python é uma linguagem de programação de alto nível, fácil de aprender e extremamente poderosa. 
-      Com uma sintaxe limpa e uma vasta gama de bibliotecas, é ideal tanto para iniciantes quanto para profissionais.
+       O Porthon é um projeto voltado para programadores iniciantes, com o propósito de esclarecer se o Portugol é uma ferramenta eficiente para o aprendizado de programação. A iniciativa apresenta argumentos e razões que destacam os benefícios de utilizar Portugol como um primeiro passo na jornada da programação. O nome Porthon nasce da fusão entre Portugol e Python, refletindo a proposta do projeto de demonstrar que por meio da aprendizagem significativa e outros fatores, o Portugol pode ser utilizado como um aliado poderoso na jornada de aprendizado de Linguagens de Programação. Python será a primeira das linguagens explorada no site, Porthon busca mostrar como ambos podem ser aprendidos em conjunto, tornando a compreensão da lógica de programação mais acessível e intuitiva. Apesar de algumas opiniões divergentes sobre o uso do Portugol, o Porthon busca mostrar que essa ferramenta pode ser um excelente recurso para quem deseja desenvolver uma base sólida antes de avançar para linguagens mais complexas. Embora existam poucas diferenças entre as variações do Portugol estruturado, o Porthon adota como base o modelo utilizado no aplicativo gratuito <a class="linksite" rel="external" target="_blank" href="https://sourceforge.net/projects/visualg30/">&#x1F517; Visualg</a> para o Portugol. Além disso, para a escrita de código tanto em Python quanto outras linguagens de programação, o editor de texto recomendado será o <a class="linksite" rel="external" lang="en" target="_blank" href="https://code.visualstudio.com/download">&#x1F517; Visual Studio Code</a>, uma ferramenta robusta e versátil que oferece recursos avançados para o desenvolvimento e facilita a transição entre diferentes linguagens de programação.
+    </p>    
+    <h2>Formulário de Sugestões e Feedback - Porthon</h2>
+    <p>Queremos saber o que você achou do Porthon, o seu olhar é importante. Se você viu algo que poderia ficar melhor, teve uma ideia massa, encontrou algum erro ou algo do tipo, aqui é o lugar certo!
     </p>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN018zjPyf5uVETWIA1om3tdZfizI8g-C0Xjgd0zL68bwFoQ/viewform?usp=dialog" target="_blank" class="retro-button">
+      &#x1F4A1; Formulário
+    </a>
 
-    <h2>Por que aprender Python?</h2>
-    <ul>
-      <li>É fácil de entender e escrever</li>
-      <li>É usada em áreas como ciência de dados, inteligência artificial, automação e web</li>
-      <li>Tem uma comunidade gigantesca</li>
-    </ul>
-
-    <h2>Exemplo de código:</h2>
-    <code>
-      print("Olá, mundo!")
-    </code>
+    <p>Obrigado pela sua colaboração. Vamos juntos deixar o Porthon cada vez mais incrível! 🚀</p>
 
 
     
