--- a/python.html
+++ b/python.html
@@ -161,7 +161,7 @@
       </tr>
     </tbody>
   </table>
-  <p class="nota">Nota: Você pode usar '<span class="builtin">type</span><span class="string">(</span><span class="variable">variavel</span><span class="string">)</span>' em python que aparecera o tipo de váriavel que ela é. </p>
+  <p class="nota">Nota: Você pode usar 'type(variavel)' em python que aparecera o tipo de váriavel que ela é. </p>
 
   <h3>Atribuições</h3>
     <p>
