--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -83,7 +83,7 @@
       &#x1F4A1; Formulário
     </a>
 
-    <p>Obrigado pela sua colaboração. Vamos juntos deixar o Porthon cada vez mais incrível! 🚀</p>
+    <p>Obrigado pela sua colaboração. Vamos juntos deixar o Porthon cada vez mais incrível! </p>
 
 
     
